--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "build": "^0.1.4",
     "firebase": "^9.14.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
