--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "bad-words": "^3.0.4",
     "build": "^0.1.4",
+    "deploy": "^1.0.3",
     "firebase": "^9.14.0",
+    "functions": "^1.0.9",
+    "init": "^0.1.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-firebase-hooks": "^5.1.1"
